PR Feedback * Explicit error classes rescued * Test begin block * Add failed_at column to delayed_job_groups

--- a/lib/generators/delayed_job_groups_plugin/templates/migration.erb
+++ b/lib/generators/delayed_job_groups_plugin/templates/migration.erb
@@ -24,6 +24,7 @@ class CreateDelayedJobGroups < ActiveRecord::Migration[<%= ActiveRecord::VERSION
       t.boolean :failure_cancels_group, default: true, null: false
       t.boolean :queueing_complete, default: false, null: false
       t.boolean :blocked, default: false, null: false
+      t.timestamp :failed_at
     end
   end
 
